fixed project and provided readme to run it

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 .idea/
 __pycache__/
-cache/
 # transferfunctions/
-cache*/
+
+data/*
+!data/data.zip
+
+models/*
+!models/models.zip
+
+cache/*
+!cache/README.md
+
+venv/
